feat: Progress on pdf query

--- a/main/.env.example
+++ b/main/.env.example
@@ -1,4 +1,5 @@
 SECRET_KEY=your_secret_key
 SQLALCHEMY_DATABASE_URI=sqlite:///site.db
 UPLOAD_URL=uploads
-REDIS_URI=redis://localhost:6379/0
+REDIS_URI=redis://localhost:6379
+PINECONE_ENV_NAME=us-east-1
