feat: Progress on pdf query

--- a/main/.env.example
+++ b/main/.env.example
@@ -3,3 +3,8 @@ SQLALCHEMY_DATABASE_URI=sqlite:///site.db
 UPLOAD_URL=uploads
 REDIS_URI=redis://localhost:6379
 PINECONE_ENV_NAME=us-east-1
+PINECONE_API_KEY=pinecone_api_key
+PINECONE_ENV_NAME=pinecone_env_name
+PINECONE_INDEX_NAME=pinecone_index_name
+LANGFUSE_PUBLIC_KEY=pinecone_public_key
+LANGFUSE_SECRET_KEY=pinecone_secret_key
